deployments/applications/web/services/frontend/overlays/aws/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: python-visitors-web-aws
spec:
  hosts:
    - "kopkfeqwuk-aws-frontend-web-python-visitors.codefly.build"
  gateways:
    - istio-system/gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: frontend
            port:
              number: 8080
